# Pok3rConf

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  gen_firmware.in.h  keycustomize.cpp  keycustomize.h  keymap.cpp  keymap.h  keymap.qml  keymapbutton.cpp  keymapbutton.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainworker.cpp  mainworker.h  qml.qrc  resource.qrc
editor/: keycap.qml  keycustomize.cpp  keycustomize.h  keycustomize.ui  keymap.cpp  keymap.h  keymap.qml  keymapwidget.cpp  keymapwidget.h
keymaps/: ansi60.json  ansi80.json
